--- a/src/Adbp.Sample.Web/Views/ZeroAccount/Login.cshtml
+++ b/src/Adbp.Sample.Web/Views/ZeroAccount/Login.cshtml
@@ -42,7 +42,7 @@
         }
     </div>
     <div class="loginCard-body">
-        <form class="adbp-ajaxForm" method="post" action="/adbpAccount/Login">
+        <form class="adbp-ajaxForm" method="post" action="/ZeroAccount/Login">
             <input type="hidden" name="ReturnUrl" value="@Model.ReturnUrl" />
             <h4 class="text-center">@L("LogIn")</h4>
 
