--- a/src/Adbp.Sample.Web/Views/ZeroAccount/_Layout.cshtml
+++ b/src/Adbp.Sample.Web/Views/ZeroAccount/_Layout.cshtml
@@ -21,7 +21,7 @@
 </head>
 <body>
     @RenderBody()
-    @Scripts.Render("~/bundles/js", "~/bundles/jquery.datatablesjs", "~/bundles/adbpjs")
+    @Scripts.Render("~/bundles/js", "~/bundles/datatablesjs", "~/bundles/adbpjs");
     <script>
         //This is used to get the application's root path from javascript. It's useful if you're running application in a virtual directory under IIS.
         var abp = abp || {}; abp.appPath = '@ApplicationPath';
