--- a/src/Adbp.Sample.Web/Views/ZeroRoles/Details.cshtml
+++ b/src/Adbp.Sample.Web/Views/ZeroRoles/Details.cshtml
@@ -8,7 +8,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb adbp-breadcrumb-background">
         <li class="breadcrumb-item"><a href="/">Home</a></li>
-        <li class="breadcrumb-item"><a href="/AdbpRoles">Roles</a></li>
+        <li class="breadcrumb-item"><a href="/ZeroRoles">Roles</a></li>
         <li class="breadcrumb-item active" aria-current="page">Details</li>
     </ol>
 </nav>
