--- a/src/Adbp.Sample.Web/Views/Home/Index.cshtml
+++ b/src/Adbp.Sample.Web/Views/Home/Index.cshtml
@@ -393,12 +393,27 @@
                     </p>
                     <hr />
                     <form>
+                        <div class="input-group mb-3">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text"><i class="fa fa-calendar"></i></span>
+                            </div>
+                            <input name="xfd" type="text" value="2018-06-17" class="form-control">
+                            <div class="input-group-append">
+                                <span class="input-group-text"><i class="fa fa-caret-down"></i></span>
+                            </div>
+                        </div>
                         <div class="form-group row">
                             <label for="inputPassword3" class="col-sm-2 col-form-label">有效日期</label>
                             <div class="col-sm-10">
-                                <i class="fa fa-calendar"></i>
-                                <input name="xfd" type="text" value="2018-06-17" class="form-group" />
-                                <i class="fa fa-caret-down"></i>
+                                <div class="input-group mb-3">
+                                    <div class="input-group-prepend">
+                                        <span class="input-group-text"><i class="fa fa-calendar"></i></span>
+                                    </div>
+                                    <input name="xfd" type="text" value="2018-06-17" class="form-control">
+                                    <div class="input-group-append">
+                                        <span class="input-group-text"><i class="fa fa-caret-down"></i></span>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </form>
