--- a/src/Adbp.Sample.Web/Views/Shared/_Layout.cshtml
+++ b/src/Adbp.Sample.Web/Views/Shared/_Layout.cshtml
@@ -31,11 +31,12 @@
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-item nav-link dropdown-toggle mr-md-2" href="#" id="bd-versions" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Bootstrap v4.0
+                        Bootstrap v4.1.x
                     </a>
                     <div class="dropdown-menu dropdown-menu-right" aria-labelledby="bd-versions">
-                        <a class="dropdown-item active" href="https://getbootstrap.com/" target="_Blank">Latest (4.x)</a>
-                        <a class="dropdown-item" href="https://v4-alpha.getbootstrap.com/" target="_Blank">v4 Alpha 6</a>
+                        <a class="dropdown-item" href="https://getbootstrap.com/" target="_Blank">Latest (4.x)</a>
+                        <a class="dropdown-item active" href="https://getbootstrap.com/docs/4.1/getting-started/introduction/" target="_Blank">v4.1.x</a>
+                        <a class="dropdown-item" href="https://getbootstrap.com/docs/4.0/getting-started/introduction/" target="_Blank">v4.0</a>
                         <a class="dropdown-item" href="https://getbootstrap.com/docs/3.3/" target="_Blank">v3.3.7</a>
                         <a class="dropdown-item" href="https://getbootstrap.com/2.3.2/" target="_Blank">v2.3.2</a>
                     </div>
