upgrade and modify
1. upgrade abp 2.reinstall package 3.import typeahead.js 4.fixbug login

--- a/src/Adbp.Sample.Web/Views/Home/Index.cshtml
+++ b/src/Adbp.Sample.Web/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Home Page";
     ViewBag.ActiveMenu = PageNames.Home;
+    string AT = "@";
 }
 <style>
     .instruction {
@@ -35,6 +36,29 @@
 <div class="row adbp-background">
     <div class="col-9">
         <div>
+            <div class="d-flex flex-column p-2">
+                <div id="typeaheadjs-example" class="instruction">
+                    <div class="title">
+                        <a class="website" href="http://twitter.github.io/typeahead.js/">
+                            typeahead.js
+                        </a>
+                        <a class="github" href="https://github.com/twitter/typeahead.js">
+                            <i class="fab fa-github" aria-hidden="true">&nbsp;v0.11.1</i>
+                        </a>
+                    </div>
+                    <p>
+                        <h4>twitter的自动完成插件</h4>
+                    </p>
+                    <div class="row">
+                        <div class="col">
+                            <input id="typeahead-input" type="text" placeholder="States of USA">
+                        </div>
+                        <div class="col">
+                            <input class="adbp-typeahead" type="text" data-suggestions="@(AT)Exception, @(AT)api" placeholder="adbp-typeahead">
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="d-flex flex-column p-2">
                 <div id="popperjs-example" class="instruction">
                     <div class="title">
@@ -851,6 +875,7 @@
     </div>
     <div class="col-3">
         <ul class="section-nav">
+            <li><a href="#typeaheadjs-example">typeahead.js</a></li>
             <li><a href="#popperjs-example">popper.js</a></li>
             <li><a href="#iconic-example">open-iconic</a></li>
             <li><a href="#font_awesome-example">font-awesome</a></li>
@@ -870,6 +895,52 @@
 
 
 @section scripts {
+    <script type="text/javascript">
+        var substringMatcher = function (strs) {
+            return function findMatches(q, cb) {
+                var matches, substringRegex;
+
+                // an array that will be populated with substring matches
+                matches = [];
+
+                // regex used to determine if a string contains the substring `q`
+                substrRegex = new RegExp(q, 'i');
+
+                // iterate through the pool of strings and for any string that
+                // contains the substring `q`, add it to the `matches` array
+                $.each(strs, function (i, str) {
+                    if (!str) {
+                        matches.push(str);
+                    }
+                    else if (substrRegex.test(str)) {
+                        matches.push(str);
+                    }
+                });
+
+                cb(matches);
+            };
+        };
+
+        var states = ['Alabama', 'Alaska', 'Arizona', 'Arkansas', 'California',
+            'Colorado', 'Connecticut', 'Delaware', 'Florida', 'Georgia', 'Hawaii',
+            'Idaho', 'Illinois', 'Indiana', 'Iowa', 'Kansas', 'Kentucky', 'Louisiana',
+            'Maine', 'Maryland', 'Massachusetts', 'Michigan', 'Minnesota',
+            'Mississippi', 'Missouri', 'Montana', 'Nebraska', 'Nevada', 'New Hampshire',
+            'New Jersey', 'New Mexico', 'New York', 'North Carolina', 'North Dakota',
+            'Ohio', 'Oklahoma', 'Oregon', 'Pennsylvania', 'Rhode Island',
+            'South Carolina', 'South Dakota', 'Tennessee', 'Texas', 'Utah', 'Vermont',
+            'Virginia', 'Washington', 'West Virginia', 'Wisconsin', 'Wyoming'
+        ];
+        $("#typeahead-input").typeahead({
+            hint: true,
+            highlight: true,
+            minLength: 0
+        },
+        {
+            source: substringMatcher(states),
+            limit: 8
+        });
+    </script>
     <script type="text/javascript">
         $(function () {
             $('input[name="daterange"]').daterangepicker({
