--- a/src/Adbp.Sample.Web/Views/Shared/_Layout.cshtml
+++ b/src/Adbp.Sample.Web/Views/Shared/_Layout.cshtml
@@ -14,9 +14,7 @@
 
     <link href="~/wwwroot/libs/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     @Styles.Render("~/bundles/css", "~/bundles/datatablesCss", "~/bundles/adbpCss")
-    @Html.IncludeStyle("~/Content/site.css")
-    <style>
-    </style>
+    @RenderSection("styles", required: false)
 </head>
 <body>
     <header class="navbar navbar-expand navbar-dark bg-dark flex-column flex-md-row bd-navbar">
