--- a/src/CompanyName.ProjectName.Web/Views/ZeroOrganizationUnit/Index.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/ZeroOrganizationUnit/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.ActiveMenu = ZeroPageNames.OrganizationUnit;
+    
 }
 <h5>
     组织机构
@@ -12,10 +13,10 @@
         <div class="card">
             <div class="card-header">
                 <div class="float-left">
-                    <h4>组织结构树</h4>
+                    <h4>组织机构树</h4>
                 </div>
                 <div class="float-right">
-                    <button type="button" class="btn btn-default" data-toggle="modal" data-target="#organization-modal_add">
+                    <button id="btn-root_add" type="button" class="btn btn-default" data-toggle="modal" data-target="#organization-modal_add" disabled="disabled">
                         <i class="fa fa-plus" aria-hidden="true"></i>&nbsp;添加根组织
                     </button>
                 </div>
