1. fixbug. 2.修改layout 样式等
1. fixbug. 组织机构  2.在前端添加组织的时候,使用ZeroOrganizationUnit  3.用户列表,
将绝大多数用户信息返回给前端.基于只有管理员能看到用户列表的考量 4.fixbug. 代理人报错. 如果用户被删除, 代理人表中其实是有脏数据的
5.

--- a/src/CompanyName.ProjectName.Web/Views/Shared/_Layout.cshtml
+++ b/src/CompanyName.ProjectName.Web/Views/Shared/_Layout.cshtml
@@ -64,17 +64,23 @@
     </header>
 
     <div class="adbp-body">
-        <section class="adbp-body-left adbp-background">
-            <aside class="border-right">
-                @Html.Action("SideBarNav", "ZeroLayout", new { activeMenu = ViewBag.ActiveMenu })
-                <footer>
-                    <p>&copy; @DateTime.Now.Year - CHENG.ZHANG</p>
-                </footer>
-            </aside>
-        </section>
-        <div class="adbp-body-content">
-            <div class="w-100">
-                @RenderBody()
+        <div class="d-flex flex-row">
+            <div class="p-2 adbp-background">
+                <section class="adbp-body-left">
+                    <aside>
+                        @Html.Action("SideBarNav", "ZeroLayout", new { activeMenu = ViewBag.ActiveMenu })
+                        <footer>
+                            <p>&copy; @DateTime.Now.Year - CHENG.ZHANG</p>
+                        </footer>
+                    </aside>
+                </section>
+            </div>
+            <div class="p-2 flex-fill">
+                <div class="adbp-body-content">
+                    <div class="w-100">
+                        @RenderBody()
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -123,6 +129,7 @@
     <script src="~/AbpScripts/GetScripts?v=@(Clock.Now.Ticks)" type="text/javascript"></script>
 
     <script type="text/javascript">
+        abp.libs.moment.useUtc = true;
         abp.localization.defaultSourceName = "ProjectName";
         window.L = abp.localization.localize;
     </script>
