--- a/src/CompanyName.ProjectName.Web/wwwroot/libs/adbp/css/adbp.css
+++ b/src/CompanyName.ProjectName.Web/wwwroot/libs/adbp/css/adbp.css
@@ -39,3 +39,10 @@ body {
 .adbp-date {
     cursor:pointer;
 }
+.navbar-dark .navbar-brand {
+    width: 200px;
+    text-align: center;
+}
+.bd-navbar.navbar-dark .navbar-nav .nav-link label {
+    margin-bottom: auto;
+}
